Combined search/results views into single TemplateViews

--- a/ringapp/templates/ringapp/keywordresults.html
+++ b/ringapp/templates/ringapp/keywordresults.html
@@ -23,7 +23,7 @@
      {% endfor %}
     </ul>
     {% else %}
-        <p>No rings found during this search.</p>
+        <p>(No result.)</p>
     {% endif %}
   </div>
   
