--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -7,32 +7,37 @@
     <div class="col-md-12 content">
 	<h1>Commutative ring search results</h1>
 
-	<p>You searched for commmutative rings</p>
+	<p>You searched for commmutative rings
 	{% if has_string %}
-	<p>which ARE {{ has_string }},</p>
+	which ARE {{ has_string }}
 	{% endif %}
 	{% if lacks_string %}
-	<p>which ARE NOT {{ lacks_string }}</p>
-	{% endif %}
+	which ARE NOT {{ lacks_string }}
+	{% endif %}.</p>
     </div>
     <div class="col-md-4 content">
-	{% if main_results %}
-	{% if scope == 'n' %}
-	<p>These commutative rings are known to satisfy all of your criteria:</p>
-	{% else %}
-	<p>These rings are consistent with your criteria, but may not satisfy your criteria when more data is supplied.</p>
-	{% endif %}
-	<br>
-	<h2>Search results</h2>
+      <h2>Results</h2>
+      <p><i>Satisfy all parameters</i></p>
+      {% if main_results %}
+      <ul>
+      {% for item in main_results %}
+        <li><a href="{% url 'commring-detail' item.ring_id %}">{{ item.name }}</a></li>
+      {% endfor %}
+      </ul>
+      {% else %}
+          <p>(No results.)</p>
+      {% endif %}        
 
-	    <ul>
-	    {% for item in main_results %}
-		<li><a href="{% url 'commring-detail' item.ring_id %}">{{ item.name }}</a></li>
-	    {% endfor %}
-	    </ul>
-	{% else %}
-	    <p>The search turned up no rings.</p>
-	{% endif %}
+      <p><i>Consistent with parameters, but may not be real hits</i></p>
+      {% if weak_results %}
+      <ul>
+        {% for item in weak_results %}
+        <li><a href="{% url 'commring-detail' item.ring_id %}">{{ item.name }}</a></li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <p>(No results.)</p>
+      {% endif %} 
     </div>
 </div>
 {% endblock %}
