--- a/ringapp/templates/ringapp/commring_list.html
+++ b/ringapp/templates/ringapp/commring_list.html
@@ -18,7 +18,8 @@
       {% if object_list %}
         {% for item in object_list %}
         <tr>
-        <td><a href="{% url 'commring-detail' item.ring_id %}" >{{ item.name }}</a></td>
+        <td><a href="{% url 'commring-detail' item.ring_id %}" >
+            <div style="height:100%;width:100%">{{ item.name }}</div></a></td>
         <td><div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: {{ item.num_known | mul:'100' }}%;">{{ item.num_known | mul:'100' }}%</div>
             </div></td>
