--- a/ringapp/templates/ringapp/viewcommring.html
+++ b/ringapp/templates/ringapp/viewcommring.html
@@ -37,33 +37,40 @@
         </div>
         <hr/ >
         <div class="row">
-            <div class="col-md-4 content">
-		<p>This ring has the following properties:</p>
-		    <ul>
-		    {% for item in has_props %}
-			<li><a href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a></li>
-		    {% endfor %}
-		    </ul>
+          <div class="col-md-4 content">
+            <div class="panel panel-default">
+              <div class="panel-heading">This ring has the following properties:</div>
+                            <div class="list-group">
+	        {% for item in has_props %}
+	        <a class="list-group-item" href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a>
+		{% endfor %}
+	      </div>
             </div>
-            <div class="col-md-4 content">
-		<p>The ring lacks the following properties:</p>
-		    <ul>
-		    {% for item in lacks_props %}
-			<li><a href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a></li>
-		    {% endfor %}
-		    </ul>
-            </div>
-            <div class="col-md-4 content">
-		<p>We don't know if the ring has or lacks the following properties:<p>
-		    <ul>
-		    {% for item in other_props %}
-			<li><a href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a></li>
-		    {% endfor %}
-		    </ul>
-	    </div>    
+          </div>
+          <div class="col-md-4 content">
+            <div class="panel panel-default">
+              <div class="panel-heading">The ring lacks the following properties:</div>
+              <div class="list-group">
+	        {% for item in lacks_props %}
+	        <a class="list-group-item" href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a>
+		{% endfor %}
+	      </div>
+            </div>		
+          </div>
+          <div class="col-md-4 content">
+            <div class="panel panel-default">
+              <div class="panel-heading">We don't know if the ring has or lacks the following properties:</div>
+              <div class="list-group">
+	        {% for item in other_props %}
+	        <a class="list-group-item" href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a>
+		{% endfor %}
+	      </div>
+            </div>		
+	  </div>    
 	{% else %}
 	    <p>Nothing was retrieved.</p>
 	{% endif %}
-     </div>
+     </div>      
+  
 </div>
 {% endblock %}
