--- a/ringapp/templates/ringapp/property_list.html
+++ b/ringapp/templates/ringapp/property_list.html
@@ -5,20 +5,20 @@
 {% block body_block %}
 
 <div class="container">
-	<h1>Ring properties</h1>
-    <div class="col-md-12 content">
-	<p>Here is a list of properties any ring can have.</p>
-	<p>(Switch to the <a href="{% url 'commproperty-list' %}">commutative ring property index</a> for additional properties defined for commutative rings.)</p>
-
+  <div class="panel panel-default">
+    <div class="panel-heading"><h1>Ring properties</h1>
+      <p>Here is a list of properties any ring can have.</p>
+      <p>(Switch to the <a href="{% url 'commproperty-list' %}">commutative ring property index</a> for additional properties defined for commutative rings.)</p>
+    </div>
+    <div class="list-group">
 	{% if object_list %}
-	    <ul>
 	    {% for item in object_list %}
-		<li><a href="{% url 'property-detail' item.property_id %}">{{ item.name }}</a>  </li>
+		<a class="list-group-item" href="{% url 'property-detail' item.property_id %}">{{ item.name }}</a>
 	    {% endfor %}
-	    </ul>
 	{% else %}
-	    <p>No properties were retrieved.</p>
+	    <li class="list-group-item">(No properties were retrieved.)</li>
 	{% endif %}
     </div>
+  </div>
 </div>
 {% endblock %}
