Added field to suggestion model, added news model. Tweaks to templates.

--- a/ringapp/templates/admin/processor.html
+++ b/ringapp/templates/admin/processor.html
@@ -28,4 +28,5 @@
         <p><input type="submit" value="Run processor" /></p>
     </form>
 </div>
+<a href="/admin/ringapp/ring">Back to rings</a>
 {% endblock %}
