Added simple popover javascript. Keyword detail page. Experimenting with glyphicons.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -36,6 +36,9 @@
             All rings &raquo;</a><a class="btn btn-default"
                                     href="{% url 'csearch' %}" role="button">
             Commutative rings &raquo;</a></p>
+
+        <p><a class="btn btn-default" href="{% url 'ksearch' %}" role="button">
+            By keyword &raquo;</a></p>
         </div>
         <div class="col-md-4 content">
             <h2>Contribute</h2>
