--- a/ringapp/templates/ringapp/resources.html
+++ b/ringapp/templates/ringapp/resources.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Resources{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div class="container">
 	<h1>Learn about ring theory</h1>
