--- a/ringapp/templates/ringapp/search.html
+++ b/ringapp/templates/ringapp/search.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Search rings{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div class="container">
     <div class="col-md-4 content">
