--- a/ringapp/templates/ringapp/suggestions.html
+++ b/ringapp/templates/ringapp/suggestions.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Suggestions{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <h1>Suggestions</h1>
 
