--- a/ringapp/templates/ringapp/about.html
+++ b/ringapp/templates/ringapp/about.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}About{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div class="container">
   <div class="col-md-8 content">
