--- a/ringapp/templates/ringapp/bibliography.html
+++ b/ringapp/templates/ringapp/bibliography.html
@@ -1,7 +1,7 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Bibliography{% endblock %}
-{% block body_block %}
+{% block content %}
 <div class="container">
 	
 
