--- a/ringapp/templates/ringapp/commlogic_detail.html
+++ b/ringapp/templates/ringapp/commlogic_detail.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Commutative implication detail{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <h1>Commutative implication detail</h1>
 
