--- a/ringapp/templates/ringapp/commlogic_list.html
+++ b/ringapp/templates/ringapp/commlogic_list.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Commutative ring implications{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <h1>Commutative ring implications</h1>
 
