--- a/ringapp/templates/ringapp/commproperty_detail.html
+++ b/ringapp/templates/ringapp/commproperty_detail.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Commutative ring property detail{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div class="container">
 	<h1>Commutative ring property detail</h1>
