--- a/ringapp/templates/ringapp/commproperty_list.html
+++ b/ringapp/templates/ringapp/commproperty_list.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Commutative ring properties{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div class="container">
   <div class="panel panel-default">
