--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Commutative ring search results{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
     <div class="col-md-12 content">
 	<h1>Commutative ring search results</h1>
