--- a/ringapp/templates/ringapp/commring_list.html
+++ b/ringapp/templates/ringapp/commring_list.html
@@ -1,9 +1,9 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 {% load mathfilters %}
 
 {% block title %}Commutative rings{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
   <div class="panel panel-default">
     <div class="panel-heading"><h1>Commutative rings</h1></div>
