--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Contribute{% endblock %}
 
-{% block body_block %}
+{% block content %}
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
