--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Home{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div>
 	<!-- Main jumbotron for a primary marketing message or call to action -->
