--- a/ringapp/templates/ringapp/keyword_detail.html
+++ b/ringapp/templates/ringapp/keyword_detail.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Property detail{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
 	<h1>Keyword detail</h1>
 
