--- a/ringapp/templates/ringapp/keywordresults.html
+++ b/ringapp/templates/ringapp/keywordresults.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Keyword search results{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
   <div class="col-md-6 content">
     <h1>Keyword search</h1>
