--- a/ringapp/templates/ringapp/login.html
+++ b/ringapp/templates/ringapp/login.html
@@ -1,6 +1,6 @@
-{% extends "ringapp/base.html" %}
+{% extends "base.html" %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
 	{% if form.errors %}
 	<p>Your username and password didn't match. Please try again.</p>
