--- a/ringapp/templates/ringapp/people.html
+++ b/ringapp/templates/ringapp/people.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}People{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <h1>Personalities in the history of ring theory</h1>
 
