--- a/ringapp/templates/ringapp/profile.html
+++ b/ringapp/templates/ringapp/profile.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Profile page{% endblock %}
 
-{% block body_block %}
+{% block content %}
 
 <div class="container">
 	<h1>{{ request.user.username }}'s user profile</h1>
