--- a/ringapp/templates/ringapp/register.html
+++ b/ringapp/templates/ringapp/register.html
@@ -1,7 +1,7 @@
-{% extends "ringapp/base.html" %}
+{% extends "base.html" %}
 {% load staticfiles %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
 	<h1>Register</h1>
 
