--- a/ringapp/templates/ringapp/theorem_detail.html
+++ b/ringapp/templates/ringapp/theorem_detail.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Theorem detail{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
 	<h1>Theorem detail</h1>
 	{% if object %}
