--- a/ringapp/templates/ringapp/theorem_list.html
+++ b/ringapp/templates/ringapp/theorem_list.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Theorems{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
 	<h1>Theorems in ring theory</h1>
 
