--- a/ringapp/templates/ringapp/viewring.html
+++ b/ringapp/templates/ringapp/viewring.html
@@ -1,8 +1,8 @@
-{% extends 'ringapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Ring detail{% endblock %}
 
-{% block body_block %}
+{% block content %}
 <div class="container">
 	<h1>Ring detail</h1>
         <hr/ >
