--- a/ringapp/templates/registration/activate.html
+++ b/ringapp/templates/registration/activate.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Activation Failure" %}{% endblock %}
 
 {% block content %}
-<div>
+<div class="container">
     <p>{% trans "Account activation failed." %}</p>
 </div>
 {% endblock %}
