--- a/ringapp/templates/registration/activation_complete.html
+++ b/ringapp/templates/registration/activation_complete.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Account Activated" %}{% endblock %}
 
 {% block content %}
-<div>
+<div class="container">
     <p>
         {% trans "Your account is now activated." %}
         {% if not user.is_authenticated %}
