--- a/ringapp/templates/registration/registration_complete.html
+++ b/ringapp/templates/registration/registration_complete.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Activation email sent" %}{% endblock %}
 
 {% block content %}
-<div>
+<div class="container">
     <p>{% trans "Please check your email to complete the registration process." %}</p>
 </div>
 {% endblock %}
