--- a/ringapp/templates/ringapp/navbar.html
+++ b/ringapp/templates/ringapp/navbar.html
@@ -31,8 +31,8 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url "account_login" %}"><i class="halflings-icon white user"></i> Settings</a></li>
-                        <li><a href="{% url "account_logout" %}"><i class="halflings-icon white off"></i> Logout</a></li>
+                        <li><a href="{% url "auth_login" %}"><i class="halflings-icon white user"></i> Settings</a></li>
+                        <li><a href="{% url "auth_logout" %}"><i class="halflings-icon white off"></i> Logout</a></li>
                     </ul>
                 </li>
              </ul>
@@ -47,13 +47,13 @@
                 <li class="">
                     <a href="">Contact</a>
                 </li>
-                <!--
-                <li class="{% ifequal request.path '/accounts/signup/'%}active{% endifequal%}">
-                    <a href="{% url "account_signup" %}">Signup</a>
+
+                <li class="{% ifequal request.path '/accounts/register/'%}active{% endifequal%}">
+                    <a href="{% url "registration_register" %}">Signup</a>
                 </li>
-                -->
+
                 <li >
-                    <a href="{% url "account_login" %}"  class="button skeleton">
+                    <a href="{% url "auth_login" %}"  class="button skeleton">
                     <i class="halflings-icon white user"></i>
                     Login
                 </a>
