add rss icon link to feed

--- a/ringapp/templates/base.html
+++ b/ringapp/templates/base.html
@@ -17,6 +17,7 @@
 		
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.icon-large.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="/static/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -107,7 +108,7 @@
     </div>
     <hr />
     <div id="footer"><footer class="container">
-      <p>&copy;  Ryan C. Schwiebert 2014-2017 </p>
+      <p>&copy;  Ryan C. Schwiebert 2014-2017 <span style="float:right;"><a href="http://glyphicons.com/">Glyphicons</a></span></p>
         </footer>
     </div>
     <!-- Bootstrap core JavaScript
