--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -50,7 +50,8 @@
                     class="btn btn-default"
                     href="https://github.com/rschwiebert/RingApp"
                     role="button">I do GitHub &raquo;</a></p> -->
-            <h3>Recent activity</h3>
+            <h3>Recent activity <a href="{% url 'newsfeed' %}"><span class="icon-large icon-rss"></span></a></h3>
+
             <ul>
                 {% autoescape off %}
                 {% for item in newsitems %}
