--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -38,7 +38,7 @@
 	    <input type="submit" value="Submit suggestion" />
 	</form>
         {% else %}
-        <p>(You need to <a href="{% url 'login' %}?next=/contribute/">log in</a> to contribute suggestions.)</p>
+        <p>(You need to <a href="{% url 'auth_login' %}?next=/contribute/">log in</a> to contribute suggestions.)</p>
         {% endif %}
 
 	</div>
