Making a couple of tweaks so that expanded-details pages are going to work.

--- a/ringapp/templates/ringapp/viewcommring.html
+++ b/ringapp/templates/ringapp/viewcommring.html
@@ -10,7 +10,7 @@
 		<div class="col-md-8 content">
                     {% if r %}
 		    <h2>Name: {{ r.name }}</h2>
-			<p>Description: {{ r.description }}</p>
+			<p>Description: {{ r.description|safe }}</p>
 			<p>Notes: {{ r.notes }}</p>
                         {% if tags %}
                         <p>Keywords
