--- a/ringapp/templates/registration/registration_form.html
+++ b/ringapp/templates/registration/registration_form.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
 	<h1>Register</h1>
-
+    <p>(We will never share your email. It's mainly used for password resets, and possibly to ask you a question about your suggestion.)</p>
 	<form method="post" action="">
 		{% csrf_token %}
 		{{ form.as_p }}
