Detail pages, html fix to contrib page.

--- a/ringapp/templates/ringapp/bergmans-exchange-ring.html
+++ b/ringapp/templates/ringapp/bergmans-exchange-ring.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock %}
+{% block title %}Bergman's exchange ring that is not clean{% endblock %}
 
 {% block content %}
 
