Detail pages for a lot of Bergman examples. Changed out 'poster' field on rings for a real user field.

--- a/ringapp/templates/ringapp/bergmans-exchange-ring.html
+++ b/ringapp/templates/ringapp/bergmans-exchange-ring.html
@@ -7,14 +7,11 @@
 <div class="container">
   <div class="col-md-8 content">
     <h1>Bergman's exchange ring that is not clean</h1>
-
-
-
-    <p>From what I have read, this may be the only example of an exchange ring
-        that is not clean that is known. The description I am giving here is adapted slightly from
+    <p>From what I have read, this all known examples of exchange rings that are not clean
+        are based on this one. The description I am giving here is adapted slightly from
         <i>Corner rings of clean rings need not be clean.</i> by Janez S&#774;ter,
         Communications in Algebra, 40:5, (2012) 1595-1604, DOI: 10.1080/00927872.2011.551901 </p>
-    <p>S&#774;ter comments that this ring is actually isomorphic to the opposite a
+    <p>S&#774;ter comments that the construction below is actually isomorphic to the opposite
         ring of the ring originally described by Bergman.</p>
 
     <div class="panel panel-default">
