--- a/ringapp/templates/ringapp/viewring.html
+++ b/ringapp/templates/ringapp/viewring.html
@@ -8,8 +8,9 @@
         <hr/ >
 	<div class="row">
 		<div class="col-md-8 content">
-                    {% if r %}
+           {% if r %}
 		    <h2>Name: {{ r.name }}</h2>
+            {% if r.user %}<p><i>This ring suggested by: {{ r.user }}</i></p> {% endif %}
 			<p>Description: {{ r.description|safe }}</p>
 			<p>Notes: {{ r.notes }}</p>
                         {% if tags %}
@@ -20,7 +21,7 @@
                             data-content="Keyword labels are links to more information!" data-original-title="Info"
                             ></span></p>
 
-                          {% endif %}
+                        {% endif %}
                 </div>
                 <div class="col-md-4 content">
 			<p>Reference(s):
