Some minor html fixes, especially involving static urls

--- a/ringapp/templates/ringapp/about.html
+++ b/ringapp/templates/ringapp/about.html
@@ -39,7 +39,7 @@
     <p>Check the FAQ if you have questions, and have fun exploring the data!</p>
   </div>
   <div class="col-md-4 content">  
-    <h2 name="contact">Contact</h2>
+    <h2>Contact</h2>
 
     <p>This application <a href="https://github.com/rschwiebert/RingApp">
         is on GitHub!</a> If you'd like to help make this site better, please
