--- a/ringapp/templates/admin/index.html
+++ b/ringapp/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'admin/css/dashboard.css' %}" />{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 
@@ -46,8 +46,8 @@
 
     <div class="app-{{ app.app_label }} module">
         <table>
-            <a href="{% url 'guides' %}">Guides to get you started</a><br>
-            <a href="{% url 'processor' %}">Ring processor</a>
+            <tr><td><a href="{% url 'guides' %}">Guides to get you started</a></td></tr>
+            <tr><td><<a href="{% url 'processor' %}">Ring processor</a>/td></tr>
         </table>
         </div>
     <div>
