--- a/ringapp/templates/base.html
+++ b/ringapp/templates/base.html
@@ -18,14 +18,14 @@
     <link rel="icon" href="../../favicon.ico">
 		
     <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/bootstrap.icon-large.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.icon-large.min.css' %}" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="/static/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="{% static 'assets/css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/static/jumbotron.css" rel="stylesheet">
+    <link href="{% static 'jumbotron.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,7 +33,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/static/assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="{% static 'assets/js/vendor/jquery.min.js' %}"><\/script>')</script>
     <script type="text/x-mathjax-config">
 		  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});
     </script>
@@ -53,7 +53,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="96x96" href="{% static 'favicon/favicon-96x96.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'favicon/manifest.json">
+    <link rel="manifest" href="{% static 'favicon/manifest.json' %}">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{% static 'favicon/ms-icon-144x144.png' %}">
     <meta name="theme-color" content="#ffffff">
@@ -82,13 +82,13 @@
                 <li><a href="{% url 'ring-list' %}">Browse all rings</a></li>
                 <li><a href="{% url 'search' %}">Search all rings</a></li>
                 <hr />
-                
+
                 <li><a href="{% url 'commring-list' %}">Browse commutative rings</a></li>
                 <li><a href="{% url 'csearch' %}">Search commutative rings</a></li>
                 <hr />
                 <li><a href="{% url 'ksearch' %}">Search rings by keyword</a></li>
-                
-                  
+
+
               </ul>
             </li>
 
@@ -99,8 +99,7 @@
             <li id="resourcesNav"><a href="{% url 'resources'%}">Learn</a></li>
               
             <li> {% if not request.user.is_authenticated %}<a class="btn btn-primary" href="{% url 'auth_login' %}"><font color="white">Login</font></a>{% else %}<a class="btn btn-primary" href="{% url 'auth_logout' %}"><font color="white">Logout</font></a></li>
-              <li><a class="btn btn-primary" href="{% url 'profile' %}"><font color="white">Profile</font></a>{% endif %}
-            <name="top"/></li>             
+            <li><a class="btn btn-primary" href="{% url 'profile' %}"><font color="white">Profile</font></a></li>{% endif %}
           </ul>
 
 	  <!--<form class="navbar-form navbar-right">
@@ -126,9 +125,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %} "></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/static/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="{% static 'assets/js/ie10-viewport-bug-workaround.js' %}"></script>
 <script>
     var originalLeave = $.fn.popover.Constructor.prototype.leave;
 $.fn.popover.Constructor.prototype.leave = function(obj){
