Fix damaged html. Reduce iterations on processor to try to reduce time.

--- a/ringapp/templates/admin/index.html
+++ b/ringapp/templates/admin/index.html
@@ -47,7 +47,7 @@
     <div class="app-{{ app.app_label }} module">
         <table>
             <tr><td><a href="{% url 'guides' %}">Guides to get you started</a></td></tr>
-            <tr><td><<a href="{% url 'processor' %}">Ring processor</a>/td></tr>
+            <tr><td><<a href="{% url 'processor' %}">Ring processor</a></td></tr>
         </table>
         </div>
     <div>
