--- a/ringapp/templates/admin/processor.html
+++ b/ringapp/templates/admin/processor.html
@@ -1,7 +1,8 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'admin/css/dashboard.css' %}" />{% endblock %}
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static 'admin/css/dashboard.css' %}"/>{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 
@@ -19,7 +20,7 @@
     <form action="{% url 'processor' %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <p><input type="submit" value="Run processor" /></p>
+        <p><input type="submit" value="Run processor"/></p>
     </form>
 </div>
 <a href="{% url 'admin:ringapp_ring_changelist' %}">Back to rings</a>
