Tweaked a few settings and added a link on the frontpage.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -79,6 +79,7 @@
             <li><a href="http://www.grdb.co.uk/">Graded Ring Database</a>:
                 A database of graded rings in algebraic geometry</li>
             <li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its Applications</a> at Ohio University</li>
+            <li><a href="https://groupprops.subwiki.org/wiki/Main_Page">GroupProps</a> the group properties wiki. It has lots of detailed data on specific groups.</li>
             <li><a href="http://stacks.math.columbia.edu/">
                 The Stacks Project</a>: an open source textbook and reference work on
                 algebraic stacks and the algebraic geometry needed to define them</li>
