--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div>
-	<!-- Main jumbotron for a primary marketing message or call to action -->
+    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
             <h1 align='center'>Welcome to the Database of Ring Theory!</h1>
@@ -18,48 +18,51 @@
     </div>
     <div class="container">
         <div class="col-md-4 content">
-        <h2>Browse <span class="icon-large icon-list"></span></h2>
-        <p>See rings and properties on record.</p>
-        <p><a class="btn btn-default" href="{% url 'ring-list' %}" role="button">
-            All rings &raquo;</a><a class="btn btn-default"
-                                    href="{% url 'commring-list' %}" role="button">
-            Commutative rings &raquo;</a></p>
-        <p><a class="btn btn-default" href="{% url 'property-list' %}" role="button">
-            All properties &raquo;</a><a class="btn btn-default"
-                                    href="{% url 'commproperty-list' %}" role="button">
-            Commutative properties &raquo;</a></p>
-        <h2>Search <span class="icon-large icon-search"></span></h2>
-        <p>You can search for rings by their properties. If you are only
-            interested in commutative rings, try the specialized search with
-            expanded, commutative-only properties. </p>
-        <p><a class="btn btn-default" href="{% url 'search' %}" role="button">
-            All rings &raquo;</a><a class="btn btn-default"
-                                    href="{% url 'csearch' %}" role="button">
-            Commutative rings &raquo;</a></p>
+            <h2>Browse <span class="icon-large icon-list"></span></h2>
+            <p>See rings and properties on record.</p>
+            <p><a class="btn btn-default" href="{% url 'ring-list' %}" role="button">
+                All rings &raquo;</a><a class="btn btn-default"
+                                        href="{% url 'commring-list' %}" role="button">
+                Commutative rings &raquo;</a></p>
+            <p><a class="btn btn-default" href="{% url 'property-list' %}" role="button">
+                All properties &raquo;</a><a class="btn btn-default"
+                                             href="{% url 'commproperty-list' %}" role="button">
+                Commutative properties &raquo;</a></p>
+            <h2>Search <span class="icon-large icon-search"></span></h2>
+            <p>You can search for rings by their properties. If you are only
+                interested in commutative rings, try the specialized search with
+                expanded, commutative-only properties. </p>
+            <p><a class="btn btn-default" href="{% url 'search' %}" role="button">
+                All rings &raquo;</a><a class="btn btn-default"
+                                        href="{% url 'csearch' %}" role="button">
+                Commutative rings &raquo;</a></p>
 
-        <p><a class="btn btn-default" href="{% url 'ksearch' %}" role="button">
-            By keyword &raquo;</a></p>
+            <p><a class="btn btn-default" href="{% url 'ksearch' %}" role="button">
+                By keyword &raquo;</a></p>
         </div>
         <div class="col-md-4 content">
             <h2>Contribute <span class="icon-large icon-lightbulb"></span></h2>
             <p>There are a lot of ways you could help, even if you don't
                 know what specifically what yet.</p>
-            <p> <a class="btn btn-default" href="{% url 'contribute' %}"
-                   role="button">Make the site better &raquo;</a></p>
-                <!-- <a
-                    class="btn btn-default"
-                    href="https://github.com/rschwiebert/RingApp"
-                    role="button">I do GitHub &raquo;</a></p> -->
+            <p><a class="btn btn-default" href="{% url 'contribute' %}"
+                  role="button">Make the site better &raquo;</a></p>
+            <!-- <a
+                class="btn btn-default"
+                href="https://github.com/rschwiebert/RingApp"
+                role="button">I do GitHub &raquo;</a></p> -->
             <h3>Recent activity <span class="icon-large icon-rss"></span></h3>
-            <p> <a class="btn btn-default" href="{% url 'newsfeed' %}"
-                   role="button">Site news RSS &raquo;</a></p>
-            <ul>
-                {% autoescape off %}
-                {% for item in newsitems %}
-                  <li>{{ item.content|safe }}</li>
-                {% endfor %}
-                {% endautoescape %}
-            </ul>
+            <p><a class="btn btn-default" href="{% url 'newsfeed' %}"
+                  role="button">Site news RSS &raquo;</a></p>
+            {% autoescape off %}
+            {% for item in newsitems %}
+            <div class="panel panel-default">
+
+                <div class="panel-heading">{{ item.category }}: {{ item.title }}</div>
+                <div class="panel-body">{{ item.content|safe }}</div>
+            </div>
+
+            {% endfor %}
+            {% endautoescape %}
         </div>
         <div class="col-md-4 content">
             <h2>Learn <span class="icon-large icon-book"></span></h2>
@@ -68,24 +71,40 @@
                   role="button">Start learning &raquo;</a></p>
             <h3>Other helpful sites <span class="icon-large icon-link"></span></h3>
             <p>If you like this site, then you also might like these sites:</p>
-            <ul>
-            <li><a href="http://topology.jdabbs.com/">π-Base</a>:
-                A community database of topological examples with
-                automated deduction and powerful search</li>
-            <li><a href="http://mathcounterexamples.net/">Math Counterexamples</a>:
-                Mathematical exceptions to the rules or intuition. (Here you can find 
-                counterexamples from a variety of mathematical disciplines.)</li>
+            <ul class="list-group">
+                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=topology.jdabbs.com"> <a
+                        href="https://topology.jdabbs.com/">π-Base</a>:
+                    A community database of topological examples with
+                    automated deduction and powerful search
+                </li>
+                <li class="list-group-item"><img
+                        src="https://www.google.com/s2/favicons?domain=mathcounterexamples.net"> <a
+                        href="http://mathcounterexamples.net/">Math Counterexamples</a>:
+                    Mathematical exceptions to the rules or intuition.
+                </li>
 
-            <li><a href="http://www.grdb.co.uk/">Graded Ring Database</a>:
-                A database of graded rings in algebraic geometry</li>
-            <li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its Applications</a> at Ohio University</li>
-            <li><a href="https://groupprops.subwiki.org/wiki/Main_Page">GroupProps</a> the group properties wiki. It has lots of detailed data on specific groups.</li>
-            <li><a href="http://stacks.math.columbia.edu/">
-                The Stacks Project</a>: an open source textbook and reference work on
-                algebraic stacks and the algebraic geometry needed to define them</li>
-            <li><a href="http://ncatlab.org/nlab/show/HomePage">nLab</a>:
-                a wiki-lab for collaborative work on Mathematics,
-                Physics and Philosophy </li>
+                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=grdb.co.uk"> <a
+                        href="http://www.grdb.co.uk/">Graded Ring Database</a>:
+                    A database of graded rings in algebraic geometry
+                </li>
+                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=facebook.com"> <a
+                        href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and
+                    its Applications</a> at Ohio University
+                </li>
+                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=groupprops.subwiki.org">
+                    <a href="https://groupprops.subwiki.org/wiki/Main_Page">GroupProps</a>: the group properties wiki.
+                </li>
+                <li class="list-group-item"><img
+                        src="https://www.google.com/s2/favicons?domain=stacks.math.columbia.edu"> <a
+                        href="https://stacks.math.columbia.edu/">
+                    The Stacks Project</a>: an open source textbook and reference work on
+                    algebraic stacks and the algebraic geometry needed to define them
+                </li>
+                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=ncatlab.org"> <a
+                        href="https://ncatlab.org/nlab/show/HomePage">nLab</a>:
+                    a wiki-lab for collaborative work on Mathematics,
+                    Physics and Philosophy
+                </li>
             </ul>
         </div>
     </div>
